Event page update and sponsor logo added to footer

--- a/_data/events/past-events/hackathons.yml
+++ b/_data/events/past-events/hackathons.yml
@@ -1,3 +1,11 @@
+- name: Codestellation IV
+  link: http://codestellation.io
+  date: November 2017
+  location: Shapiro Science Center, Brandeis University
+- name: Printathon III
+  link: http://printathon.org
+  date: March 2017
+  location: Farber Mezzanine, Brandeis University
 - name: Codestellation III
   date: October 2016
   location: Shapiro Science Center, Brandeis University
